[package]
name = "rs-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "job"
path = "src/job.rs"

[dependencies]
axum = "0.6.20"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.111"
serde_yaml = "0.9.30"
once_cell = "1.19.0"
rs_infras = "0.1.7"

# redis crates
redis = { version ="0.23.3",features = ["r2d2","tokio-comp","cluster","json"]}
r2d2 = "0.8.10"

#uuid
uuid = { version = "1.7.0", features = ["serde", "v4"] }

#validator
validator = { version = "0.16.1", features = ["derive"] }
async-trait = "0.1.77"
thiserror = "1.0.56"
