[package]
name = "rs-api"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "job"
path = "src/job.rs"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
serde_yaml = "0.9.33"
once_cell = "1.20.2"

# redis操作库
redis = { version = "0.28.0", features = ["r2d2", "tokio-comp", "cluster", "cluster-async", "json"] }
# r2d2用于redis连接池管理
r2d2 = "0.8.10"

# sqlx用于数据库操作
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-native-tls", "mysql", "chrono", "time"] }

#uuid
uuid = { version = "1.11.1", features = ["serde", "v4"] }

#validator
validator = { version = "0.19.0", features = ["derive"] }
async-trait = "0.1.85"
thiserror = "2.0.10"

# body util
http-body-util = "0.1.2"
